# boon-dd

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BOON_DD_ENGINE_SIMPLICITY_PLAN.md  BOON_DD_HONEST_COMPILER_PLAN.md  BOON_DD_PLY_HUMAN_SURFACE_VERIFICATION_PLAN.md  BOON_DD_PLY_RENDERER_PLAN.md  BOON_DD_PURE_DD_PLY_SIMPLIFICATION_MILESTONES.md  Cargo.toml  boon_timely_dd_transpiler_plan.md
crates/boon_backend_app_window/: Cargo.toml
crates/boon_backend_app_window/src/: lib.rs
crates/boon_backend_browser/: Cargo.toml
crates/boon_backend_browser/src/: lib.rs
crates/boon_backend_ply/: Cargo.toml
crates/boon_backend_ply/src/: app.rs  evidence.rs  human_surface.rs  lib.rs
crates/boon_backend_ratatui/: Cargo.toml
crates/boon_backend_ratatui/src/: human_surface.rs  lib.rs
crates/boon_backend_wgpu/: Cargo.toml
crates/boon_backend_wgpu/src/: lib.rs
crates/boon_codegen_rust/: Cargo.toml
crates/boon_codegen_rust/src/: lib.rs
crates/boon_compiler/: Cargo.toml
crates/boon_compiler/src/: lib.rs
crates/boon_dd/: Cargo.toml
crates/boon_dd/src/: lib.rs
crates/boon_examples/: Cargo.toml
crates/boon_examples/src/: lib.rs
crates/boon_hir/: Cargo.toml
crates/boon_hir/src/: lib.rs
crates/boon_host_schema/: Cargo.toml
crates/boon_host_schema/src/: lib.rs
crates/boon_render_ir/: Cargo.toml
crates/boon_render_ir/src/: lib.rs
crates/boon_runtime_host/: Cargo.toml
crates/boon_runtime_host/src/: lib.rs
crates/boon_shape/: Cargo.toml
crates/boon_shape/src/: lib.rs
crates/boon_source/: Cargo.toml
crates/boon_source/src/: lib.rs
crates/boon_syntax/: Cargo.toml
crates/boon_syntax/src/: lib.rs
crates/boon_verify/: Cargo.toml
crates/boon_verify/src/: lib.rs
crates/boon_wasm_smoke/: Cargo.toml
crates/boon_wasm_smoke/src/: lib.rs
docs/blockers/: engine-simplicity-dd-purity-blocker.md  engine-simplicity-prompt-audit-blocker.md  engine-simplicity-runtime-semantics-blocker.md  parser-simplification-blocker.md  phase0-honest-compiler-blockers.md
docs/language/: boon-language-manifest.toml
docs/language/negative-corpus/: README.md  adversarial_source_words_in_text.bn  adversarial_source_words_in_text.toml  resolver_unknown_reference.bn  resolver_unknown_reference.toml  shape_invalid_add.bn  shape_invalid_add.toml  syntax_unterminated_text.bn  syntax_unterminated_text.toml  unsupported_library_call.bn  unsupported_library_call.toml
docs/ply-human-surfaces/: control-manifest.toml
docs/prompts/engine-simplicity/: 00_goal_prompt.md  01_pure_dd_architecture_audit.md  02_runtime_simplicity_and_performance_audit.md  03_verifier_honesty_audit.md
docs/prompts/honest-compiler/: 01_shortcut_and_fallback_audit.md  02_language_completeness_audit.md  03_runtime_boundary_audit.md  04_verifier_fake_pass_audit.md  05_cross_repo_semantics_audit.md
docs/prompts/renderer-ply/: architecture.prompt.md  dependency-boundary.prompt.md  fake-pass-verifier.prompt.md  native-browser-behavior.prompt.md  old-renderer-removal.prompt.md  stale-artifact.prompt.md
docs/prompts/renderer-ply-human-surfaces/: example-behavior-review.prompt.md  fake-pass-harness-review.prompt.md  human-surface-coverage-review.prompt.md  screenshot-authenticity-review.prompt.md  stale-artifact-review.prompt.md  target-control-review.prompt.md
examples/cells/: expected.render.json  scenario.toml  source.bn
examples/counter/: expected.render.json  scenario.toml  source.bn
examples/counter_hold/: expected.render.json  scenario.toml  source.bn
examples/crud/: expected.render.json  scenario.toml  source.bn
examples/flight_booker/: expected.render.json  scenario.toml  source.bn
examples/interval/: expected.render.json  scenario.toml  source.bn
examples/interval_hold/: expected.render.json  scenario.toml  source.bn
examples/latest/: expected.render.json  scenario.toml  source.bn
examples/list_map_block/: expected.render.json  scenario.toml  source.bn
examples/list_map_external_dep/: expected.render.json  scenario.toml  source.bn
examples/list_object_state/: expected.render.json  scenario.toml  source.bn
examples/list_retain_count/: expected.render.json  scenario.toml  source.bn
examples/list_retain_reactive/: expected.render.json  scenario.toml  source.bn
examples/list_retain_remove/: expected.render.json  scenario.toml  source.bn
examples/pong/: expected.render.json  scenario.toml  source.bn
examples/shopping_list/: expected.render.json  scenario.toml  source.bn
examples/temperature_converter/: expected.render.json  scenario.toml  source.bn
examples/then/: expected.render.json  scenario.toml  source.bn
examples/todo_mvc/: expected.render.json  scenario.toml  source.bn
examples/todo_mvc_physical/: expected.render.json  scenario.toml  source.bn
examples/when/: expected.render.json  scenario.toml  source.bn
examples/while/: expected.render.json  scenario.toml  source.bn
shaders/common/: ui_rect.wgsl
xtask/: Cargo.toml
xtask/src/: main.rs  ply_human_surfaces.rs
