[workspace]
resolver = "3"
members = [
    "crates/*",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
differential-dataflow = { version = "=0.23.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timely = { version = "=0.29.0", default-features = false }
wasm-bindgen = "=0.2.120"
