[workspace]
resolver = "3"
members = [
    "crates/*",
    "xtask",
]
exclude = [
    "generated/*",
]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
crossterm = "=0.29.0"
differential-dataflow = { version = "=0.23.0", default-features = false }
ratatui = "=0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
timely = { version = "=0.29.0", default-features = false }
ply-engine = { version = "=1.1.1", default-features = false }
wasm-bindgen = "=0.2.120"
base64 = "0.22"
image = { version = "0.24", default-features = false, features = ["png"] }
portable-pty = "0.8"
toml = "0.8"
