[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
boon_codegen_rust = { path = "../crates/boon_codegen_rust" }
boon_compiler = { path = "../crates/boon_compiler" }
boon_dd = { path = "../crates/boon_dd" }
boon_hir = { path = "../crates/boon_hir" }
boon_runtime_host = { path = "../crates/boon_runtime_host" }
boon_shape = { path = "../crates/boon_shape" }
boon_syntax = { path = "../crates/boon_syntax" }
naga.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
