[package]
name = "boon_backend_browser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_dd = { path = "../boon_dd" }
boon_runtime_host = { path = "../boon_runtime_host" }
boon_backend_wgpu = { path = "../boon_backend_wgpu" }
wasm-bindgen.workspace = true
wgpu.workspace = true
