[package]
name = "boon_backend_ratatui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_dd = { path = "../boon_dd" }
boon_examples = { path = "../boon_examples" }
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
