[package]
name = "boon_backend_wgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_dd = { path = "../boon_dd" }
boon_runtime_host = { path = "../boon_runtime_host" }
wesl.workspace = true
wgpu.workspace = true
wgsl_bindgen.workspace = true
