[package]
name = "boon_backend_wgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_dd = { path = "../boon_dd" }
boon_examples = { path = "../boon_examples" }
wesl.workspace = true
wgpu.workspace = true
wgsl_bindgen.workspace = true
