[package]
name = "boon_runtime_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_compiler = { path = "../boon_compiler" }
boon_dd = { path = "../boon_dd" }
differential-dataflow.workspace = true
serde.workspace = true
timely.workspace = true
toml.workspace = true
