[package]
name = "boon_wasm_smoke"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boon_dd = { path = "../boon_dd" }
boon_runtime_host = { path = "../boon_runtime_host" }
serde_json.workspace = true
timely.workspace = true
wasm-bindgen.workspace = true
